public/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Avenir&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Arial, sans-serif;
}

.navbar-container {
  width: 100%;
  position: fixed;
  z-index: 110;
  transition: all 0.2s ease;
  display: flex;
  align-items: center;
}

.navbar-container.text-white a {
  color: white;
}

.navbar-inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0px 45px;
  width: 100%;
}

.navbar-brand {
  font-family: "Montserrat", sans-serif;
  font-size: 24px; /* Adjust the font size if needed */
  font-weight: 700;
}

.flex-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  position: relative;
}

.center-container {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.navbar-social-links {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
}

.btn {
  display: flex;
  align-items: center;
  text-decoration: none;
  padding: 4px 8px;
  border-radius: 3px;
  transition: background-color 0.3s;
}

.btn i {
  margin-right: 5px;
}

.btn-linkedin {
  color: #0077b5;
}

.btn-github {
  color: #333;
}

.btn-resume {
  color: #dc3545;
}

.btn:hover {
  background-color: #0072c6;
  border-radius: 4px;
  color: #ffffff;
  padding: 4px 8px;
}

.navbar-main-menu {
  display: flex;
  align-items: center;
}

.navbar-main-menu ul {
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
}

.navbar-main-menu li {
  margin-left: 30px;
}

.navbar-main-menu a {
  text-decoration: none;
  color: #333;
  transition: color 0.3s;
  padding: 4px 8px;
}

.navbar-main-menu a:hover {
  background-color: #0072c6;
  border-radius: 4px;
  color: #ffffff;
  padding: 4px 8px;
}

.navbar-mobile-menu {
  display: none;
  font-size: 24px;
}

@media (max-width: 768px) {
  .navbar-main-menu {
    display: none;
  }

  .navbar-mobile-menu {
    display: block;
    cursor: pointer;
  }
}

#About.container.py-5 {
  padding-top: 178px !important;
  /* Other styles specific to the #About section */
}

.education-container {
  padding-bottom: 78px !important;
}

.about-image {
  object-fit: cover;
  height: 100%;
}

.about-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

